# serenity

Userland/Applications/: CMakeLists.txt
Userland/Applications/Calendar/: CMakeLists.txt  CalendarEvent.gml  EventDialog.cpp  EventDialog.h  main.cpp
Userland/Applications/CalendarSettings/: CalendarSettingsWidget.cpp  CalendarSettingsWidget.h
Userland/Libraries/LibGUI/: Calendar.cpp  Calendar.h
Userland/Services/Taskbar/: TaskbarWindow.cpp  main.cpp
